--- a/app/views/password_mailer/reset.html.erb
+++ b/app/views/password_mailer/reset.html.erb
@@ -1,5 +1,6 @@
-<h1>Password#reset</h1>
+Hi <%= params[:user].email %>
 
-<p>
-  <%= @greeting %>, find me in app/views/password_mailer/reset.html.erb
-</p>
+Someone requested reset of your password.
+
+If it was you, click the link to reset your password. The link will expire in 15 minutes.
+<%= link_to "Reset password", password_reset_edit_url(token: @token) %>
