--- a/app/views/password_mailer/reset.text.erb
+++ b/app/views/password_mailer/reset.text.erb
@@ -1,3 +1,6 @@
-Password#reset
+Hi <%= params[:user].email %>
 
-<%= @greeting %>, find me in app/views/password_mailer/reset.text.erb
+Someone requested reset of your password.
+
+If it was you, click the link to reset your password. The link will expire in 15 minutes.
+<%= password_reset_edit_url(token: @token) %>
