--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -10,3 +10,5 @@
 <% if Current.user.twitter_accounts.none? %>
   <%= button_to "Connect a Twitter account", "/auth/twitter", method: :post, class: "btn btn-primary" %>
 <% end %>
+
+<%= render @tweets %>
